# EasiStartup

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: StartupReminder.vue
src/router/: index.ts
src/types/: settings.ts
src/utils/: settings.ts
src/views/: Settings.vue  StartupEditor.vue
